force-app/main/default/objects/AcntrObj1__c/AcntrObj1__c.object-meta.xml
<CustomObject>
    <description>Modify  comment for AcntrObj1</description>
    <label>AcntrObj1</label>
    <nameField>
        <label>AcntrObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AcntrObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>