force-app/main/default/objects/AcntrObj1__c/fields/AccFt1s__c.field-meta.xml
<CustomField>
    <fullName>AccFt1s__c</fullName>
    <description>Add Description org1 field</description>
    <label>AccFt1</label>
    <type>Email</type>
</CustomField>