force-app/main/default/objects/AcntrObj1__c/fields/AcntrOrg2F1__c.field-meta.xml
<CustomField>
    <fullName>AcntrOrg2F1__c</fullName>
    <label>AcntrOrg2F1</label>
    <type>Phone</type>
</CustomField>