force-app/main/default/objects/AcntrObj1__c/fields/AcntrOrg3F1__c.field-meta.xml
<CustomField>
    <fullName>AcntrOrg3F1__c</fullName>
    <description>Add AcntrOrg3F1 field</description>
    <label>AcntrOrg3F1</label>
    <type>Phone</type>
</CustomField>